# cpp-exercise

./: .gitignore  CMakeLists.txt  exercise-test.cpp  exercise.cc  main.cc
.devcontainer/: Dockerfile  devcontainer.json
